--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.App img {
+  max-width: 100px;
+  max-height: 100%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
